[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/themes/kenney/9-Slice/Ancient/tan_inlay.png" type="Texture" id=1]
[ext_resource path="res://resources/themes/kenney/9-Slice/Ancient/tan_pressed.png" type="Texture" id=2]
[ext_resource path="res://resources/themes/kenney/9-Slice/Ancient/tan.png" type="Texture" id=3]
[ext_resource path="res://resources/themes/kenney/kenney.tres" type="Theme" id=5]
[ext_resource path="res://resources/fonts/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://resources/fonts/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://resources/fonts/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scripts/controllers/PlayerUpgradeController.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 7 )
fallback/0 = ExtResource( 8 )
fallback/1 = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 44, 44 )
margin_left = 1.7434
margin_right = 2.13083
margin_top = 2.13083
margin_bottom = 1.7434

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 4.19347
margin_right = 3.66929
margin_top = 4.19347
margin_bottom = 4.06243

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 3.48681
margin_right = 3.68052
margin_top = 3.68052
margin_bottom = 6.00506

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 7.33056
margin_right = 5.70154
margin_top = 6.29369
margin_bottom = 7.86711

[node name="PlayerUpgrades" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 1000.0
margin_right = -100.0
margin_bottom = 800.0
theme = ExtResource( 5 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMarginTween" type="Tween" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 817.0
margin_bottom = 393.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 790.0
margin_bottom = 365.0
custom_constants/separation = 20

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 770.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 289.0
margin_right = 481.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Upgrades"

[node name="UpgradeContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 385.0
margin_top = 68.0
margin_right = 385.0
margin_bottom = 287.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 307.0
margin_right = 770.0
margin_bottom = 345.161

[node name="NextRound" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 285.0
margin_right = 485.0
margin_bottom = 38.1608
rect_min_size = Vector2( 200, 0 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.34902, 0.34902, 0.34902, 1 )
custom_colors/font_color = Color( 0.34902, 0.34902, 0.34902, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0.454902, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.34902, 0.34902, 0.34902, 1 )
text = "Next Round"
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/NextRound" to="." method="_on_next_round_pressed"]
